# shared-storage

./: Cargo.toml  Makefile  README.md  build.rs  go.mod  go.sum
cmd/storage/: main.go
cmd/storage/server/: main.go
cnode/: server.go  uploader.go
cnode/storage/: export_test.go  local.go  local_test.go  s3.go  s3_test.go  storage.go
master/: server.go
master/orchestrator/: mock.go  orchestrator.go
master/status/: heartbeat.go  location.go
mnode/: server.go
proto/: cnode.pb.go  cnode.proto
proto/master/: master.pb.go  master.proto
proto/server/: server.pb.go  server.proto
server/: server.go  status.go
server/storage/: export_test.go  localfile.go  localfile_test.go  s3.go  s3_test.go  storage.go
src/: error.rs  lib.rs
src/blobstore/: mem.rs  mock.rs  mod.rs
src/cache/: bucket.rs  cache.proto  mod.rs  node.rs  reader.rs  replica.rs  server.rs  status.rs  uploader.rs
src/cache/storage/: mem.rs  mod.rs
src/client/: api.proto  blob_writer.rs  cli.rs  client.rs  mod.rs
src/discover/: local.rs  mod.rs
src/discovery/: mod.rs
src/manifest/: blobctrl.rs  bucket.rs  locator.rs  manifest.proto  mod.rs  placement.rs  reconcile.rs  server.rs  status.rs  versions.rs
src/manifest/storage/: memblob.rs  metadata.proto  mod.rs  persist.proto
src/master/: mod.rs  server.rs
src/proto/: master.proto  mod.rs  server.proto
src/server/: mod.rs  server.rs
src/server/storage/: file.rs  mod.rs
