[package]
name = "shared-storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
prost = "0.9"
tokio = { version = "1.13", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.6"
tower = {version = "0.4"}
futures = { version = "0.3", default-features = false, features = ["alloc"] }
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.6"
